--- a/index.html
+++ b/index.html
@@ -775,16 +775,16 @@
                 <div class="wire-location-title">Santa Monica</div>
                 <div class="wire-info-block">
                     <div class="wire-info-label">Address</div>
-                    <div class="wire-info-text">1260 15th St # P2<br>Santa Monica, CA 90404</div>
+                    <div class="wire-info-text">1444 S Carmelina Ave Suite 133 <br>Los Angeles, CA 90025</div>
                 </div>
                 <div class="wire-info-block">
                     <div class="wire-info-label">Phone</div>
-                    <div class="wire-info-text">(424) 738-3778</div>
+                    <div class="wire-info-text">(310) 666-1401</div>
                 </div>
                 <div class="wire-info-block">
                     <div class="wire-info-label">Office Hours</div>
                     <div class="wire-info-text">
-                        Monday - Friday: 8:30am – 5:00pm<br>
+                        Monday - Friday: 10:00am – 5:00pm<br>
                         Saturday: By Appointment<br>
                         Sunday: Closed
                     </div>
