--- a/index.html
+++ b/index.html
@@ -655,11 +655,11 @@
 <body>
     <!-- Navigation -->
     <div class="wire-nav">
-        <div class="wire-logo">Golian Audiology</div>
+        <a href="index.html" class="wire-logo">Golian Audiology</a>
         <div class="wire-menu">
-            <div class="wire-menu-item">Home</div>
-            <div class="wire-menu-item">About Us</div>
-            <div class="wire-menu-item">Services</div>
+            <a href="index.html" class="wire-menu-item">Home</a>
+            <a href="about.html" class="wire-menu-item">About Us</a>
+            <a href="services.html" class="wire-menu-item">Services</a>
             <div class="wire-menu-item">Our Clinics</div>
         </div>
         <button class="wire-cta-button" onclick="openModal()">Book Appointment</button>
