--- a/services.html
+++ b/services.html
@@ -470,14 +470,12 @@
 </head>
 <body>
     <!-- Navigation -->
-    <div class="wire-nav">
-        <a href="index.html" class="wire-logo">Golian Audiology</a>
-        <div class="wire-menu">
-            <a href="index.html" class="wire-menu-item">Home</a>
-            <a href="#" class="wire-menu-item">About Us</a>
-            <a href="services.html" class="wire-menu-item">Services</a>
-            <a href="#" class="wire-menu-item">Our Clinics</a>
-        </div>
+    <div class="wire-menu">
+    <a href="index.html" class="wire-menu-item">Home</a>
+    <a href="about.html" class="wire-menu-item">About Us</a>
+    <a href="services.html" class="wire-menu-item">Services</a>
+    <div class="wire-menu-item">Our Clinics</div>
+</div>
         <button class="wire-cta-button" onclick="openModal()">Book Appointment</button>
     </div>
     
