--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: -webkit-sticky;
             position: sticky;
             top: 0;
             z-index: 1000;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            width: 100%;
         }
         
         .wire-logo {
