--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            position: -webkit-sticky;
-            position: sticky;
+            position: fixed;
             top: 0;
+            left: 0;
+            right: 0;
             z-index: 1000;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
             width: 100%;
@@ -94,7 +95,7 @@
         
         /* Hero Section */
         .wire-hero {
-            padding: 80px 60px 60px;
+            padding: 180px 60px 60px;
             background: white;
             position: relative;
             min-height: 450px;
