--- a/services.html
+++ b/services.html
@@ -29,10 +29,13 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            position: sticky;
+            position: fixed;
             top: 0;
+            left: 0;
+            right: 0;
             z-index: 1000;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            width: 100%;
         }
         
         .wire-logo {
@@ -98,7 +101,7 @@
         
         /* Page Hero */
         .page-hero {
-            padding: 100px 60px 60px;
+            padding: 180px 60px 60px;
             background: white;
             text-align: center;
         }
