--- a/about.html
+++ b/about.html
@@ -799,6 +799,8 @@
                 position: fixed;
                 top: 0;
                 right: -100%;
+                left: auto;
+                transform: none;
                 width: 280px;
                 height: 100vh;
                 background: white;
@@ -901,10 +903,10 @@
         </a>
         <div class="wire-menu" id="mobileMenu">
             <button class="menu-close" onclick="toggleMenu()">&times;</button>
-            <a href="index.html" class="wire-menu-item" onclick="toggleMenu()">Home</a>
-            <a href="about.html" class="wire-menu-item" onclick="toggleMenu()">About Us</a>
-            <a href="services.html" class="wire-menu-item" onclick="toggleMenu()">Services</a>
-            <a href="about.html#contact-location" class="wire-menu-item" onclick="toggleMenu()">Our Clinics</a>
+            <a href="index.html" class="wire-menu-item">Home</a>
+            <a href="about.html" class="wire-menu-item">About Us</a>
+            <a href="services.html" class="wire-menu-item">Services</a>
+            <a href="about.html#contact-location" class="wire-menu-item">Our Clinics</a>
             <button class="wire-cta-button" onclick="openModal(); toggleMenu();">Book Appointment</button>
         </div>
         <button class="wire-cta-button nav-cta-button" onclick="openModal()">Book Appointment</button>
