--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         /* Navigation */
         .wire-nav {
             background: #fff;
-            padding: 0 60px;
+            padding: 10px 60px;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -156,7 +156,7 @@
         
         /* Hero Section */
         .wire-hero {
-            padding: 200px 60px 60px;
+            padding: 120px 60px 60px;
             background: white;
             position: relative;
             min-height: 450px;
@@ -1074,7 +1074,7 @@
     <!-- Navigation -->
     <div class="wire-nav">
         <a href="index.html" class="wire-logo">
-            <img src="images/logo.png" alt="Golian Audiology Logo" style="height: 220px; width: auto;">
+            <img src="images/logo.png" alt="Golian Audiology Logo" style="height: 80px; width: auto;">
         </a>
         <div class="wire-menu" id="mobileMenu">
             <button class="menu-close" onclick="toggleMenu()">&times;</button>
