--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
                 justify-content: center;
                 align-items: center;
                 position: fixed;
-                background: transparent;
+                background: #ffffff;
             }
             
             .wire-nav img {
